/cp 2016-04-12  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/68722
	* parser.c (cp_parser_cache_defarg): When file ends in default
	argument simply return error_mark_node.

/testsuite
2016-04-12  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/68722
	* g++.dg/parse/pr68722.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@234909 138bc75d-0d04-0410-961f-82ee72b054a4